# tic-tac-toe

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  tox.ini  wheel-builder.bat
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CI-CD.md  CONFIGURATION.md  IMPROVEMENTS.md  INSTALLATION-GUIDE.md  INSTALLATION-TECHNICAL-DETAILS.md  INSTALLER-CUSTOMIZATION.md  RELEASE.md  TEMPLATE-CHECKLIST.md  TEMPLATE-USAGE-GUIDE.md  TESTING.md  TROUBLESHOOTING.md
scripts/: run-ci.ps1  run-ci.sh
src/tictactoe/: __init__.py  __main__.py
src/tictactoe/config/: __init__.py  gui.py
src/tictactoe/domain/: __init__.py  logic.py
src/tictactoe/ui/: __init__.py
src/tictactoe/ui/cli/: __init__.py  main.py
src/tictactoe/ui/gui/: __init__.py  bootstrap.py  contracts.py  headless.py  headless_view.py  main.py  theme.py  view.py
tests/: test_cli.py  test_config.py  test_gui.py  test_logic.py
