[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tictactoe"
version = "0.1.0"
description = "A modern Tic Tac Toe game built with CustomTkinter"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["game", "tic-tac-toe", "gui", "customtkinter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games"
]
dependencies = [
    "customtkinter>=5.2.2",
    "darkdetect>=0.8.0",
    "packaging>=25.0",
    "pillow>=12.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.8.0",
    "tox>=4.18.0"
]

[project.scripts]
tictactoe = "tictactoe.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/tic-tac-toe"
Repository = "https://github.com/yourusername/tic-tac-toe"
Issues = "https://github.com/yourusername/tic-tac-toe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tictactoe = ["assets/*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
include = '\\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
extend-ignore = ["UP006", "UP007", "UP037"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
